[package]
name = "osmosis-grpc-client"
version = "12.3.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2021"
description = "Rust implementation of cosmos osmosisd GRPC client."
repository = "https://github.com/kumanote/osmosis-grpc-client-rs"
readme = "README.md"
keywords = ["cosmos", "osmosis", "osmosisd", "grpc client", "grpc"]
build = "build.rs"

[dependencies]
bytes = "1.1.0"
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
subtle-encoding = "0.5"
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.8.2", features = ["tls", "gzip", "prost"] }

[build-dependencies]
tonic-build = "0.8.2"
